Fixed android dark mode support issues. Updated cordova config to enable AndroidX, updated to cordova-android 9.1.0. Updated webext webpack config to chunk into smaller files to resolve addons.mozilla.org requirement. Updated CHANGELOG.

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -9,6 +9,7 @@
 }
 
 :root {
+  color-scheme: light dark;
   font-size: $base-font-size;
 }
 
